# api.yaml
@@ -4535,6 +4535,57 @@ paths:
         500:
           description: "Error Connect API"
 
+  /checkuserstage:
+    post:
+      tags:
+        - "Baddebt"
+      security:
+        - bearerAuth: []
+      summary: ""
+      description: "get coverrage totalloss tdr value"
+
+      responses:
+        200:
+          description: "successful"
+        500:
+          description: "Error Connect API"
+
+  /baddebtlistdashboard:
+    post:
+      tags:
+        - "Baddebt"
+      security:
+        - bearerAuth: []
+      summary: get data from bad debt
+      description: load data from "Database
+      requestBody:
+        content:
+          application/json:
+            schema:
+              properties:
+                pageno:
+                  type: number
+                  example: 1
+                pagesize:
+                  type: number
+                  example: 50
+                branch:
+                  type: string
+                  example: "30"
+                sort_type:
+                  type: string
+                  description: "sort_type"
+                  example: ""
+                sort_field:
+                  type: string
+                  description: "sort_field"
+                  example: ""
+      responses:
+        200:
+          description: "successful get data"
+        400:
+          description: "error"
+
 components:
   requestBodies:
     MPLS_econsentverify:
